// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`تذكرة المطبخ إضافات كثيرة 1`] = `
{
  "height": 644,
  "ops": [
    "T 288,34 32/800 sans center rtl «KITCHEN RECEIPT»",
    "T 288,81 18/600 sans center rtl «الفرع الرئيسي»",
    "T 288,117 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 288,153 20/800 sans center rtl «محلي»",
    "T 288,196 16/600 sans center rtl «رقم الطلب · Order No»",
    "T 288,232 40/800 sans center rtl «1042»",
    "R 16,279 544x1",
    "T 560,300 26/800 sans right rtl «1x برجر دجاج | Chicken Burger»",
    "T 546,333 18/600 sans right rtl «— بدون بصل»",
    "T 546,358 18/600 sans right rtl «— إضافي صوص»",
    "T 546,383 18/600 sans right rtl «— جبن شيدر»",
    "T 546,408 18/600 sans right rtl «— بدون مخلل»",
    "T 546,434 18/600 sans right rtl «— حار جداً»",
    "T 546,459 18/600 sans right rtl «— خبز محمّص»",
    "T 546,484 18/600 sans right rtl «— بطاطس بدل السلطة»",
    "R 16,520 544x1",
    "T 288,547 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 381,596 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 203,596 16",
  ],
}
`;

exports[`تذكرة المطبخ اسم عربي طويل جداً 1`] = `
{
  "height": 500,
  "ops": [
    "T 288,34 32/800 sans center rtl «KITCHEN RECEIPT»",
    "T 288,81 18/600 sans center rtl «الفرع الرئيسي»",
    "T 288,117 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 288,153 20/800 sans center rtl «محلي»",
    "T 288,196 16/600 sans center rtl «رقم الطلب · Order No»",
    "T 288,232 40/800 sans center rtl «1042»",
    "R 16,279 544x1",
    "T 560,300 26/800 sans right rtl «1x شاورما دجاج حارّة بالثوم والمخلل»",
    "T 560,333 26/800 sans right rtl «والبطاطس المقلية داخل خبز صاج كبير»",
    "R 16,376 544x1",
    "T 288,403 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 381,452 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 203,452 16",
  ],
}
`;

exports[`تذكرة المطبخ بشعار 1`] = `
{
  "height": 612,
  "ops": [
    "I logo 190,34 196x131",
    "T 288,178 24/800 sans center rtl «KITCHEN RECEIPT»",
    "T 288,224 18/600 sans center rtl «الفرع الرئيسي»",
    "T 288,260 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 288,296 20/800 sans center rtl «محلي»",
    "T 288,340 16/600 sans center rtl «رقم الطلب · Order No»",
    "T 288,376 40/800 sans center rtl «1042»",
    "R 16,422 544x1",
    "T 560,444 26/800 sans right rtl «1x برجر دجاج | Chicken Burger»",
    "R 16,487 544x1",
    "T 288,514 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 381,563 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 203,563 16",
  ],
}
`;

exports[`تذكرة المطبخ جهاز نداء بدل رقم الطلب 1`] = `
{
  "height": 468,
  "ops": [
    "T 288,34 32/800 sans center rtl «KITCHEN RECEIPT»",
    "T 288,81 18/600 sans center rtl «الفرع الرئيسي»",
    "T 288,117 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 288,153 20/800 sans center rtl «محلي»",
    "T 288,196 16/600 sans center rtl «جهاز النداء · Pager»",
    "T 288,232 44/800 sans center rtl «17»",
    "R 16,279 544x1",
    "T 560,300 26/800 sans right rtl «1x برجر دجاج | Chicken Burger»",
    "R 16,344 544x1",
    "T 288,371 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 381,419 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 203,419 16",
  ],
}
`;

exports[`تذكرة المطبخ صنف واحد 1`] = `
{
  "height": 468,
  "ops": [
    "T 288,34 32/800 sans center rtl «KITCHEN RECEIPT»",
    "T 288,81 18/600 sans center rtl «الفرع الرئيسي»",
    "T 288,117 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 288,153 20/800 sans center rtl «محلي»",
    "T 288,196 16/600 sans center rtl «رقم الطلب · Order No»",
    "T 288,232 40/800 sans center rtl «1042»",
    "R 16,279 544x1",
    "T 560,300 26/800 sans right rtl «1x برجر دجاج | Chicken Burger»",
    "R 16,344 544x1",
    "T 288,371 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 381,419 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 203,419 16",
  ],
}
`;

exports[`تذكرة المطبخ ملاحظة طويلة 1`] = `
{
  "height": 518,
  "ops": [
    "T 288,34 32/800 sans center rtl «KITCHEN RECEIPT»",
    "T 288,81 18/600 sans center rtl «الفرع الرئيسي»",
    "T 288,117 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 288,153 20/800 sans center rtl «محلي»",
    "T 288,196 16/600 sans center rtl «رقم الطلب · Order No»",
    "T 288,232 40/800 sans center rtl «1042»",
    "R 16,279 544x1",
    "T 560,300 26/800 sans right rtl «1x برجر دجاج | Chicken Burger»",
    "T 546,333 18/700 sans right rtl «ملاحظات: الزبون لديه حساسية من المكسرات، يرجى تنظيف السطح»",
    "T 546,358 18/700 sans right rtl «جيداً قبل التحضير وعدم استخدام نفس السكين»",
    "R 16,394 544x1",
    "T 288,421 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 381,470 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 203,470 16",
  ],
}
`;

exports[`تذكرة المطبخ ١٠ أصناف 1`] = `
{
  "height": 857,
  "ops": [
    "T 288,34 32/800 sans center rtl «KITCHEN RECEIPT»",
    "T 288,81 18/600 sans center rtl «الفرع الرئيسي»",
    "T 288,117 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 288,153 20/800 sans center rtl «محلي»",
    "T 288,196 16/600 sans center rtl «رقم الطلب · Order No»",
    "T 288,232 40/800 sans center rtl «1042»",
    "R 16,279 544x1",
    "T 560,300 26/800 sans right rtl «1x صنف 1»",
    "T 560,344 26/800 sans right rtl «2x صنف 2»",
    "T 560,387 26/800 sans right rtl «3x صنف 3»",
    "T 560,430 26/800 sans right rtl «4x صنف 4»",
    "T 560,473 26/800 sans right rtl «1x صنف 5»",
    "T 560,516 26/800 sans right rtl «2x صنف 6»",
    "T 560,560 26/800 sans right rtl «3x صنف 7»",
    "T 560,603 26/800 sans right rtl «4x صنف 8»",
    "T 560,646 26/800 sans right rtl «1x صنف 9»",
    "T 560,689 26/800 sans right rtl «2x صنف 10»",
    "R 16,732 544x1",
    "T 288,759 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 381,808 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 203,808 16",
  ],
}
`;

exports[`تذكرة المطبخ ٣٠ صنفاً 1`] = `
{
  "height": 1721,
  "ops": [
    "T 288,34 32/800 sans center rtl «KITCHEN RECEIPT»",
    "T 288,81 18/600 sans center rtl «الفرع الرئيسي»",
    "T 288,117 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 288,153 20/800 sans center rtl «محلي»",
    "T 288,196 16/600 sans center rtl «رقم الطلب · Order No»",
    "T 288,232 40/800 sans center rtl «1042»",
    "R 16,279 544x1",
    "T 560,300 26/800 sans right rtl «1x منتج 1»",
    "T 560,344 26/800 sans right rtl «1x منتج 2»",
    "T 560,387 26/800 sans right rtl «1x منتج 3»",
    "T 560,430 26/800 sans right rtl «1x منتج 4»",
    "T 560,473 26/800 sans right rtl «1x منتج 5»",
    "T 560,516 26/800 sans right rtl «1x منتج 6»",
    "T 560,560 26/800 sans right rtl «1x منتج 7»",
    "T 560,603 26/800 sans right rtl «1x منتج 8»",
    "T 560,646 26/800 sans right rtl «1x منتج 9»",
    "T 560,689 26/800 sans right rtl «1x منتج 10»",
    "T 560,732 26/800 sans right rtl «1x منتج 11»",
    "T 560,776 26/800 sans right rtl «1x منتج 12»",
    "T 560,819 26/800 sans right rtl «1x منتج 13»",
    "T 560,862 26/800 sans right rtl «1x منتج 14»",
    "T 560,905 26/800 sans right rtl «1x منتج 15»",
    "T 560,948 26/800 sans right rtl «1x منتج 16»",
    "T 560,992 26/800 sans right rtl «1x منتج 17»",
    "T 560,1035 26/800 sans right rtl «1x منتج 18»",
    "T 560,1078 26/800 sans right rtl «1x منتج 19»",
    "T 560,1121 26/800 sans right rtl «1x منتج 20»",
    "T 560,1164 26/800 sans right rtl «1x منتج 21»",
    "T 560,1208 26/800 sans right rtl «1x منتج 22»",
    "T 560,1251 26/800 sans right rtl «1x منتج 23»",
    "T 560,1294 26/800 sans right rtl «1x منتج 24»",
    "T 560,1337 26/800 sans right rtl «1x منتج 25»",
    "T 560,1380 26/800 sans right rtl «1x منتج 26»",
    "T 560,1424 26/800 sans right rtl «1x منتج 27»",
    "T 560,1467 26/800 sans right rtl «1x منتج 28»",
    "T 560,1510 26/800 sans right rtl «1x منتج 29»",
    "T 560,1553 26/800 sans right rtl «1x منتج 30»",
    "R 16,1596 544x1",
    "T 288,1623 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 381,1672 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 203,1672 16",
  ],
}
`;

exports[`تذكرة المطبخ ٥٨ ملم 1`] = `
{
  "height": 468,
  "ops": [
    "T 192,34 32/800 sans center rtl «KITCHEN RECEIPT»",
    "T 192,81 18/600 sans center rtl «الفرع الرئيسي»",
    "T 192,117 16/600 sans center rtl «2026/09/08 — 14:32»",
    "T 192,153 20/800 sans center rtl «محلي»",
    "T 192,196 16/600 sans center rtl «رقم الطلب · Order No»",
    "T 192,232 40/800 sans center rtl «1042»",
    "R 16,279 352x1",
    "T 368,300 26/800 sans right rtl «1x برجر دجاج | Chicken Burger»",
    "R 16,344 352x1",
    "T 192,371 16/600 sans center rtl «طبعها · By: عمّار»",
    "T 285,419 22/800 sans right rtl «بالعافية عليكم»",
    "G heart 107,419 16",
  ],
}
`;

exports[`تقرير إغلاق الوردية أرقام كبيرة 1`] = `
{
  "height": 1119,
  "ops": [
    "T 288,32 30/800 sans center rtl «مقهى هبيّة»",
    "T 288,74 19/600 sans center rtl «الفرع الرئيسي»",
    "T 288,112 20/800 sans center rtl «تقرير إغلاق الوردية»",
    "T 288,144 15/600 sans center rtl «Shift Close Report»",
    "T 288,176 16/600 sans center rtl «2026/09/08 — 23:10»",
    "R 16,208 544x1",
    "T 560,227 17/600 sans right rtl «الكاشير · Cashier: عمّار»",
    "T 560,259 16/600 sans right rtl «من · From: 2026/09/08 — 07:00»",
    "R 16,291 544x1",
    "T 288,310 16/800 sans center rtl «المبيعات · Sales»",
    "T 560,342 18/600 sans right rtl «إجمالي المبيعات · Gross»",
    "T 16,342 18/500 mono left ltr «987654.32 ﷼»",
    "T 560,374 18/600 sans right rtl «الخصومات · Discounts»",
    "T 16,374 18/500 mono left ltr «-120.00 ﷼»",
    "T 560,406 18/600 sans right rtl «المرتجعات · Refunds (3)»",
    "T 16,406 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,438 18/600 sans right rtl «ضريبة القيمة المضافة · VAT»",
    "T 16,438 18/500 mono left ltr «611.28 ﷼»",
    "T 560,470 20/800 sans right rtl «صافي المبيعات · Net»",
    "T 16,470 20/500 mono left ltr «912345.67 ﷼»",
    "R 16,502 544x1",
    "T 288,522 16/800 sans center rtl «طرق الدفع · Payments»",
    "T 560,554 18/600 sans right rtl «كاش · Cash»",
    "T 16,554 18/500 mono left ltr «456789.01 ﷼»",
    "T 560,586 18/600 sans right rtl «شبكة · Card»",
    "T 16,586 18/500 mono left ltr «2500.00 ﷼»",
    "T 560,618 18/600 sans right rtl «تطبيقات توصيل · Delivery Apps»",
    "T 16,618 18/500 mono left ltr «237.50 ﷼»",
    "R 16,650 544x1",
    "T 288,669 16/800 sans center rtl «الصندوق · Cash Drawer»",
    "T 560,701 18/600 sans right rtl «الرصيد الافتتاحي · Opening float»",
    "T 16,701 18/500 mono left ltr «300.00 ﷼»",
    "T 560,733 18/600 sans right rtl «مبيعات الكاش · Cash sales»",
    "T 16,733 18/500 mono left ltr «+456789.01 ﷼»",
    "T 560,765 18/600 sans right rtl «مرتجعات كاش · Refunds paid»",
    "T 16,765 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,797 18/800 sans right rtl «المتوقع في الدرج · Expected»",
    "T 16,797 18/500 mono left ltr «457089.01 ﷼»",
    "T 560,829 18/600 sans right rtl «المعدود · Counted»",
    "T 16,829 18/500 mono left ltr «457000.00 ﷼»",
    "T 560,861 22/800 sans right rtl «الفرق · Variance»",
    "T 16,861 22/500 mono left ltr «-89.01 ﷼»",
    "R 10,843 557x2",
    "R 10,885 557x2",
    "R 10,843 2x43",
    "R 565,843 2x43",
    "R 16,904 544x1",
    "T 560,923 17/600 sans right rtl «عدد الطلبات · Orders»",
    "T 16,923 17/500 mono left ltr «214»",
    "T 560,955 17/600 sans right rtl «متوسط الفاتورة · Avg ticket»",
    "T 16,955 17/500 mono left ltr «21.67 ﷼»",
    "R 16,987 544x1",
    "T 560,1022 15/600 sans right rtl «توقيع الكاشير · Cashier  ______________»",
    "T 560,1070 15/600 sans right rtl «توقيع المدير · Manager   ______________»",
  ],
}
`;

exports[`تقرير إغلاق الوردية أقسام مخفيّة 1`] = `
{
  "height": 856,
  "ops": [
    "T 288,32 30/800 sans center rtl «مقهى هبيّة»",
    "T 288,74 19/600 sans center rtl «الفرع الرئيسي»",
    "T 288,112 20/800 sans center rtl «تقرير إغلاق الوردية»",
    "T 288,144 15/600 sans center rtl «Shift Close Report»",
    "T 288,176 16/600 sans center rtl «2026/09/08 — 23:10»",
    "R 16,208 544x1",
    "T 560,227 17/600 sans right rtl «الكاشير · Cashier: عمّار»",
    "T 560,259 16/600 sans right rtl «من · From: 2026/09/08 — 07:00»",
    "R 16,291 544x1",
    "T 288,310 16/800 sans center rtl «المبيعات · Sales»",
    "T 560,342 18/600 sans right rtl «إجمالي المبيعات · Gross»",
    "T 16,342 18/500 mono left ltr «4820.50 ﷼»",
    "T 560,374 18/600 sans right rtl «ضريبة القيمة المضافة · VAT»",
    "T 16,374 18/500 mono left ltr «611.28 ﷼»",
    "T 560,406 20/800 sans right rtl «صافي المبيعات · Net»",
    "T 16,406 20/500 mono left ltr «4637.50 ﷼»",
    "R 16,438 544x1",
    "T 288,458 16/800 sans center rtl «طرق الدفع · Payments»",
    "T 560,490 18/600 sans right rtl «كاش · Cash»",
    "T 16,490 18/500 mono left ltr «1900.00 ﷼»",
    "T 560,522 18/600 sans right rtl «شبكة · Card»",
    "T 16,522 18/500 mono left ltr «2500.00 ﷼»",
    "T 560,554 18/600 sans right rtl «تطبيقات توصيل · Delivery Apps»",
    "T 16,554 18/500 mono left ltr «237.50 ﷼»",
    "R 16,586 544x1",
    "T 288,605 16/800 sans center rtl «الصندوق · Cash Drawer»",
    "T 560,637 18/600 sans right rtl «الرصيد الافتتاحي · Opening float»",
    "T 16,637 18/500 mono left ltr «300.00 ﷼»",
    "T 560,669 18/600 sans right rtl «مبيعات الكاش · Cash sales»",
    "T 16,669 18/500 mono left ltr «+1900.00 ﷼»",
    "T 560,701 18/600 sans right rtl «مرتجعات كاش · Refunds paid»",
    "T 16,701 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,733 18/800 sans right rtl «المتوقع في الدرج · Expected»",
    "T 16,733 18/500 mono left ltr «2137.00 ﷼»",
    "T 560,765 18/600 sans right rtl «المعدود · Counted»",
    "T 16,765 18/500 mono left ltr «2130.00 ﷼»",
    "T 560,797 22/800 sans right rtl «الفرق · Variance»",
    "T 16,797 22/500 mono left ltr «-7.00 ﷼»",
    "R 10,779 557x2",
    "R 10,821 557x2",
    "R 10,779 2x43",
    "R 565,779 2x43",
  ],
}
`;

exports[`تقرير إغلاق الوردية بلا فرق 1`] = `
{
  "height": 1119,
  "ops": [
    "T 288,32 30/800 sans center rtl «مقهى هبيّة»",
    "T 288,74 19/600 sans center rtl «الفرع الرئيسي»",
    "T 288,112 20/800 sans center rtl «تقرير إغلاق الوردية»",
    "T 288,144 15/600 sans center rtl «Shift Close Report»",
    "T 288,176 16/600 sans center rtl «2026/09/08 — 23:10»",
    "R 16,208 544x1",
    "T 560,227 17/600 sans right rtl «الكاشير · Cashier: عمّار»",
    "T 560,259 16/600 sans right rtl «من · From: 2026/09/08 — 07:00»",
    "R 16,291 544x1",
    "T 288,310 16/800 sans center rtl «المبيعات · Sales»",
    "T 560,342 18/600 sans right rtl «إجمالي المبيعات · Gross»",
    "T 16,342 18/500 mono left ltr «4820.50 ﷼»",
    "T 560,374 18/600 sans right rtl «الخصومات · Discounts»",
    "T 16,374 18/500 mono left ltr «-120.00 ﷼»",
    "T 560,406 18/600 sans right rtl «المرتجعات · Refunds (3)»",
    "T 16,406 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,438 18/600 sans right rtl «ضريبة القيمة المضافة · VAT»",
    "T 16,438 18/500 mono left ltr «611.28 ﷼»",
    "T 560,470 20/800 sans right rtl «صافي المبيعات · Net»",
    "T 16,470 20/500 mono left ltr «4637.50 ﷼»",
    "R 16,502 544x1",
    "T 288,522 16/800 sans center rtl «طرق الدفع · Payments»",
    "T 560,554 18/600 sans right rtl «كاش · Cash»",
    "T 16,554 18/500 mono left ltr «1900.00 ﷼»",
    "T 560,586 18/600 sans right rtl «شبكة · Card»",
    "T 16,586 18/500 mono left ltr «2500.00 ﷼»",
    "T 560,618 18/600 sans right rtl «تطبيقات توصيل · Delivery Apps»",
    "T 16,618 18/500 mono left ltr «237.50 ﷼»",
    "R 16,650 544x1",
    "T 288,669 16/800 sans center rtl «الصندوق · Cash Drawer»",
    "T 560,701 18/600 sans right rtl «الرصيد الافتتاحي · Opening float»",
    "T 16,701 18/500 mono left ltr «300.00 ﷼»",
    "T 560,733 18/600 sans right rtl «مبيعات الكاش · Cash sales»",
    "T 16,733 18/500 mono left ltr «+1900.00 ﷼»",
    "T 560,765 18/600 sans right rtl «مرتجعات كاش · Refunds paid»",
    "T 16,765 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,797 18/800 sans right rtl «المتوقع في الدرج · Expected»",
    "T 16,797 18/500 mono left ltr «2137.00 ﷼»",
    "T 560,829 18/600 sans right rtl «المعدود · Counted»",
    "T 16,829 18/500 mono left ltr «2137.00 ﷼»",
    "T 560,861 22/800 sans right rtl «الفرق · Variance»",
    "T 16,861 22/500 mono left ltr «+0.00 ﷼»",
    "R 10,843 557x2",
    "R 10,885 557x2",
    "R 10,843 2x43",
    "R 565,843 2x43",
    "R 16,904 544x1",
    "T 560,923 17/600 sans right rtl «عدد الطلبات · Orders»",
    "T 16,923 17/500 mono left ltr «214»",
    "T 560,955 17/600 sans right rtl «متوسط الفاتورة · Avg ticket»",
    "T 16,955 17/500 mono left ltr «21.67 ﷼»",
    "R 16,987 544x1",
    "T 560,1022 15/600 sans right rtl «توقيع الكاشير · Cashier  ______________»",
    "T 560,1070 15/600 sans right rtl «توقيع المدير · Manager   ______________»",
  ],
}
`;

exports[`تقرير إغلاق الوردية دفع إلكتروني مفعّل 1`] = `
{
  "height": 1151,
  "ops": [
    "T 288,32 30/800 sans center rtl «مقهى هبيّة»",
    "T 288,74 19/600 sans center rtl «الفرع الرئيسي»",
    "T 288,112 20/800 sans center rtl «تقرير إغلاق الوردية»",
    "T 288,144 15/600 sans center rtl «Shift Close Report»",
    "T 288,176 16/600 sans center rtl «2026/09/08 — 23:10»",
    "R 16,208 544x1",
    "T 560,227 17/600 sans right rtl «الكاشير · Cashier: عمّار»",
    "T 560,259 16/600 sans right rtl «من · From: 2026/09/08 — 07:00»",
    "R 16,291 544x1",
    "T 288,310 16/800 sans center rtl «المبيعات · Sales»",
    "T 560,342 18/600 sans right rtl «إجمالي المبيعات · Gross»",
    "T 16,342 18/500 mono left ltr «4820.50 ﷼»",
    "T 560,374 18/600 sans right rtl «الخصومات · Discounts»",
    "T 16,374 18/500 mono left ltr «-120.00 ﷼»",
    "T 560,406 18/600 sans right rtl «المرتجعات · Refunds (3)»",
    "T 16,406 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,438 18/600 sans right rtl «ضريبة القيمة المضافة · VAT»",
    "T 16,438 18/500 mono left ltr «611.28 ﷼»",
    "T 560,470 20/800 sans right rtl «صافي المبيعات · Net»",
    "T 16,470 20/500 mono left ltr «4637.50 ﷼»",
    "R 16,502 544x1",
    "T 288,522 16/800 sans center rtl «طرق الدفع · Payments»",
    "T 560,554 18/600 sans right rtl «كاش · Cash»",
    "T 16,554 18/500 mono left ltr «1900.00 ﷼»",
    "T 560,586 18/600 sans right rtl «شبكة · Card»",
    "T 16,586 18/500 mono left ltr «2500.00 ﷼»",
    "T 560,618 18/600 sans right rtl «تطبيقات توصيل · Delivery Apps»",
    "T 16,618 18/500 mono left ltr «237.50 ﷼»",
    "T 560,650 18/600 sans right rtl «دفع إلكتروني · Online»",
    "T 16,650 18/500 mono left ltr «415.75 ﷼»",
    "R 16,682 544x1",
    "T 288,701 16/800 sans center rtl «الصندوق · Cash Drawer»",
    "T 560,733 18/600 sans right rtl «الرصيد الافتتاحي · Opening float»",
    "T 16,733 18/500 mono left ltr «300.00 ﷼»",
    "T 560,765 18/600 sans right rtl «مبيعات الكاش · Cash sales»",
    "T 16,765 18/500 mono left ltr «+1900.00 ﷼»",
    "T 560,797 18/600 sans right rtl «مرتجعات كاش · Refunds paid»",
    "T 16,797 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,829 18/800 sans right rtl «المتوقع في الدرج · Expected»",
    "T 16,829 18/500 mono left ltr «2137.00 ﷼»",
    "T 560,861 18/600 sans right rtl «المعدود · Counted»",
    "T 16,861 18/500 mono left ltr «2130.00 ﷼»",
    "T 560,893 22/800 sans right rtl «الفرق · Variance»",
    "T 16,893 22/500 mono left ltr «-7.00 ﷼»",
    "R 10,875 557x2",
    "R 10,917 557x2",
    "R 10,875 2x43",
    "R 565,875 2x43",
    "R 16,936 544x1",
    "T 560,955 17/600 sans right rtl «عدد الطلبات · Orders»",
    "T 16,955 17/500 mono left ltr «214»",
    "T 560,987 17/600 sans right rtl «متوسط الفاتورة · Avg ticket»",
    "T 16,987 17/500 mono left ltr «21.67 ﷼»",
    "R 16,1019 544x1",
    "T 560,1054 15/600 sans right rtl «توقيع الكاشير · Cashier  ______________»",
    "T 560,1102 15/600 sans right rtl «توقيع المدير · Manager   ______________»",
  ],
}
`;

exports[`تقرير إغلاق الوردية فرق موجب 1`] = `
{
  "height": 1119,
  "ops": [
    "T 288,32 30/800 sans center rtl «مقهى هبيّة»",
    "T 288,74 19/600 sans center rtl «الفرع الرئيسي»",
    "T 288,112 20/800 sans center rtl «تقرير إغلاق الوردية»",
    "T 288,144 15/600 sans center rtl «Shift Close Report»",
    "T 288,176 16/600 sans center rtl «2026/09/08 — 23:10»",
    "R 16,208 544x1",
    "T 560,227 17/600 sans right rtl «الكاشير · Cashier: عمّار»",
    "T 560,259 16/600 sans right rtl «من · From: 2026/09/08 — 07:00»",
    "R 16,291 544x1",
    "T 288,310 16/800 sans center rtl «المبيعات · Sales»",
    "T 560,342 18/600 sans right rtl «إجمالي المبيعات · Gross»",
    "T 16,342 18/500 mono left ltr «4820.50 ﷼»",
    "T 560,374 18/600 sans right rtl «الخصومات · Discounts»",
    "T 16,374 18/500 mono left ltr «-120.00 ﷼»",
    "T 560,406 18/600 sans right rtl «المرتجعات · Refunds (3)»",
    "T 16,406 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,438 18/600 sans right rtl «ضريبة القيمة المضافة · VAT»",
    "T 16,438 18/500 mono left ltr «611.28 ﷼»",
    "T 560,470 20/800 sans right rtl «صافي المبيعات · Net»",
    "T 16,470 20/500 mono left ltr «4637.50 ﷼»",
    "R 16,502 544x1",
    "T 288,522 16/800 sans center rtl «طرق الدفع · Payments»",
    "T 560,554 18/600 sans right rtl «كاش · Cash»",
    "T 16,554 18/500 mono left ltr «1900.00 ﷼»",
    "T 560,586 18/600 sans right rtl «شبكة · Card»",
    "T 16,586 18/500 mono left ltr «2500.00 ﷼»",
    "T 560,618 18/600 sans right rtl «تطبيقات توصيل · Delivery Apps»",
    "T 16,618 18/500 mono left ltr «237.50 ﷼»",
    "R 16,650 544x1",
    "T 288,669 16/800 sans center rtl «الصندوق · Cash Drawer»",
    "T 560,701 18/600 sans right rtl «الرصيد الافتتاحي · Opening float»",
    "T 16,701 18/500 mono left ltr «300.00 ﷼»",
    "T 560,733 18/600 sans right rtl «مبيعات الكاش · Cash sales»",
    "T 16,733 18/500 mono left ltr «+1900.00 ﷼»",
    "T 560,765 18/600 sans right rtl «مرتجعات كاش · Refunds paid»",
    "T 16,765 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,797 18/800 sans right rtl «المتوقع في الدرج · Expected»",
    "T 16,797 18/500 mono left ltr «2137.00 ﷼»",
    "T 560,829 18/600 sans right rtl «المعدود · Counted»",
    "T 16,829 18/500 mono left ltr «2150.00 ﷼»",
    "T 560,861 22/800 sans right rtl «الفرق · Variance»",
    "T 16,861 22/500 mono left ltr «+13.00 ﷼»",
    "R 10,843 557x2",
    "R 10,885 557x2",
    "R 10,843 2x43",
    "R 565,843 2x43",
    "R 16,904 544x1",
    "T 560,923 17/600 sans right rtl «عدد الطلبات · Orders»",
    "T 16,923 17/500 mono left ltr «214»",
    "T 560,955 17/600 sans right rtl «متوسط الفاتورة · Avg ticket»",
    "T 16,955 17/500 mono left ltr «21.67 ﷼»",
    "R 16,987 544x1",
    "T 560,1022 15/600 sans right rtl «توقيع الكاشير · Cashier  ______________»",
    "T 560,1070 15/600 sans right rtl «توقيع المدير · Manager   ______________»",
  ],
}
`;

exports[`تقرير إغلاق الوردية كامل 1`] = `
{
  "height": 1119,
  "ops": [
    "T 288,32 30/800 sans center rtl «مقهى هبيّة»",
    "T 288,74 19/600 sans center rtl «الفرع الرئيسي»",
    "T 288,112 20/800 sans center rtl «تقرير إغلاق الوردية»",
    "T 288,144 15/600 sans center rtl «Shift Close Report»",
    "T 288,176 16/600 sans center rtl «2026/09/08 — 23:10»",
    "R 16,208 544x1",
    "T 560,227 17/600 sans right rtl «الكاشير · Cashier: عمّار»",
    "T 560,259 16/600 sans right rtl «من · From: 2026/09/08 — 07:00»",
    "R 16,291 544x1",
    "T 288,310 16/800 sans center rtl «المبيعات · Sales»",
    "T 560,342 18/600 sans right rtl «إجمالي المبيعات · Gross»",
    "T 16,342 18/500 mono left ltr «4820.50 ﷼»",
    "T 560,374 18/600 sans right rtl «الخصومات · Discounts»",
    "T 16,374 18/500 mono left ltr «-120.00 ﷼»",
    "T 560,406 18/600 sans right rtl «المرتجعات · Refunds (3)»",
    "T 16,406 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,438 18/600 sans right rtl «ضريبة القيمة المضافة · VAT»",
    "T 16,438 18/500 mono left ltr «611.28 ﷼»",
    "T 560,470 20/800 sans right rtl «صافي المبيعات · Net»",
    "T 16,470 20/500 mono left ltr «4637.50 ﷼»",
    "R 16,502 544x1",
    "T 288,522 16/800 sans center rtl «طرق الدفع · Payments»",
    "T 560,554 18/600 sans right rtl «كاش · Cash»",
    "T 16,554 18/500 mono left ltr «1900.00 ﷼»",
    "T 560,586 18/600 sans right rtl «شبكة · Card»",
    "T 16,586 18/500 mono left ltr «2500.00 ﷼»",
    "T 560,618 18/600 sans right rtl «تطبيقات توصيل · Delivery Apps»",
    "T 16,618 18/500 mono left ltr «237.50 ﷼»",
    "R 16,650 544x1",
    "T 288,669 16/800 sans center rtl «الصندوق · Cash Drawer»",
    "T 560,701 18/600 sans right rtl «الرصيد الافتتاحي · Opening float»",
    "T 16,701 18/500 mono left ltr «300.00 ﷼»",
    "T 560,733 18/600 sans right rtl «مبيعات الكاش · Cash sales»",
    "T 16,733 18/500 mono left ltr «+1900.00 ﷼»",
    "T 560,765 18/600 sans right rtl «مرتجعات كاش · Refunds paid»",
    "T 16,765 18/500 mono left ltr «-63.00 ﷼»",
    "T 560,797 18/800 sans right rtl «المتوقع في الدرج · Expected»",
    "T 16,797 18/500 mono left ltr «2137.00 ﷼»",
    "T 560,829 18/600 sans right rtl «المعدود · Counted»",
    "T 16,829 18/500 mono left ltr «2130.00 ﷼»",
    "T 560,861 22/800 sans right rtl «الفرق · Variance»",
    "T 16,861 22/500 mono left ltr «-7.00 ﷼»",
    "R 10,843 557x2",
    "R 10,885 557x2",
    "R 10,843 2x43",
    "R 565,843 2x43",
    "R 16,904 544x1",
    "T 560,923 17/600 sans right rtl «عدد الطلبات · Orders»",
    "T 16,923 17/500 mono left ltr «214»",
    "T 560,955 17/600 sans right rtl «متوسط الفاتورة · Avg ticket»",
    "T 16,955 17/500 mono left ltr «21.67 ﷼»",
    "R 16,987 544x1",
    "T 560,1022 15/600 sans right rtl «توقيع الكاشير · Cashier  ______________»",
    "T 560,1070 15/600 sans right rtl «توقيع المدير · Manager   ______________»",
  ],
}
`;

exports[`تقرير إغلاق الوردية ٥٨ ملم 1`] = `
{
  "height": 1119,
  "ops": [
    "T 192,32 30/800 sans center rtl «مقهى هبيّة»",
    "T 192,74 19/600 sans center rtl «الفرع الرئيسي»",
    "T 192,112 20/800 sans center rtl «تقرير إغلاق الوردية»",
    "T 192,144 15/600 sans center rtl «Shift Close Report»",
    "T 192,176 16/600 sans center rtl «2026/09/08 — 23:10»",
    "R 16,208 352x1",
    "T 368,227 17/600 sans right rtl «الكاشير · Cashier: عمّار»",
    "T 368,259 16/600 sans right rtl «من · From: 2026/09/08 — 07:00»",
    "R 16,291 352x1",
    "T 192,310 16/800 sans center rtl «المبيعات · Sales»",
    "T 368,342 18/600 sans right rtl «إجمالي المبيعات · Gross»",
    "T 16,342 18/500 mono left ltr «4820.50 ﷼»",
    "T 368,374 18/600 sans right rtl «الخصومات · Discounts»",
    "T 16,374 18/500 mono left ltr «-120.00 ﷼»",
    "T 368,406 18/600 sans right rtl «المرتجعات · Refunds (3)»",
    "T 16,406 18/500 mono left ltr «-63.00 ﷼»",
    "T 368,438 18/600 sans right rtl «ضريبة القيمة المضافة · VAT»",
    "T 16,438 18/500 mono left ltr «611.28 ﷼»",
    "T 368,470 20/800 sans right rtl «صافي المبيعات · Net»",
    "T 16,470 20/500 mono left ltr «4637.50 ﷼»",
    "R 16,502 352x1",
    "T 192,522 16/800 sans center rtl «طرق الدفع · Payments»",
    "T 368,554 18/600 sans right rtl «كاش · Cash»",
    "T 16,554 18/500 mono left ltr «1900.00 ﷼»",
    "T 368,586 18/600 sans right rtl «شبكة · Card»",
    "T 16,586 18/500 mono left ltr «2500.00 ﷼»",
    "T 368,618 18/600 sans right rtl «تطبيقات توصيل · Delivery Apps»",
    "T 16,618 18/500 mono left ltr «237.50 ﷼»",
    "R 16,650 352x1",
    "T 192,669 16/800 sans center rtl «الصندوق · Cash Drawer»",
    "T 368,701 18/600 sans right rtl «الرصيد الافتتاحي · Opening float»",
    "T 16,701 18/500 mono left ltr «300.00 ﷼»",
    "T 368,733 18/600 sans right rtl «مبيعات الكاش · Cash sales»",
    "T 16,733 18/500 mono left ltr «+1900.00 ﷼»",
    "T 368,765 18/600 sans right rtl «مرتجعات كاش · Refunds paid»",
    "T 16,765 18/500 mono left ltr «-63.00 ﷼»",
    "T 368,797 18/800 sans right rtl «المتوقع في الدرج · Expected»",
    "T 16,797 18/500 mono left ltr «2137.00 ﷼»",
    "T 368,829 18/600 sans right rtl «المعدود · Counted»",
    "T 16,829 18/500 mono left ltr «2130.00 ﷼»",
    "T 368,861 22/800 sans right rtl «الفرق · Variance»",
    "T 16,861 22/500 mono left ltr «-7.00 ﷼»",
    "R 10,843 365x2",
    "R 10,885 365x2",
    "R 10,843 2x43",
    "R 373,843 2x43",
    "R 16,904 352x1",
    "T 368,923 17/600 sans right rtl «عدد الطلبات · Orders»",
    "T 16,923 17/500 mono left ltr «214»",
    "T 368,955 17/600 sans right rtl «متوسط الفاتورة · Avg ticket»",
    "T 16,955 17/500 mono left ltr «21.67 ﷼»",
    "R 16,987 352x1",
    "T 368,1022 15/600 sans right rtl «توقيع الكاشير · Cashier  ______________»",
    "T 368,1070 15/600 sans right rtl «توقيع المدير · Manager   ______________»",
  ],
}
`;
